@@ -7844,6 +7844,7 @@ devel/rubygem-cucumber-cucumber-expressions15|devel/rubygem-cucumber-cucumber-ex
 devel/rubygem-cucumber-messages18|devel/rubygem-cucumber-messages|2023-09-04|Remove obsoleted port. Use devel/rubygem-cucumber-messages instead
 textproc/rubygem-cucumber-gherkin23|textproc/rubygem-cucumber-gherkin|2023-09-04|Remove obsoleted port. Use textproc/rubygem-cucumber-gherkin instead
 textproc/rubygem-cucumber-html-formatter19|textproc/rubygem-cucumber-html-formatter|2023-09-04|Remove obsoleted port. Use textproc/rubygem-cucumber-html-formatter instead
+cad/py-ocp||2023-09-05|Has expired: Broken since 2021
 sysutils/bacula11-libs3|sysutils/bacula-libs3|2023-09-10|No reason to have version in the port name. Works with 11 and 13
 net-p2p/transmission-cli|net-p2p/transmission|2023-09-10|Moved to a flavored version
 net-p2p/transmission-daemon|net-p2p/transmission|2023-09-10|Moved to a flavored version
@@ -7852,4 +7853,4 @@ net-p2p/transmission-qt|net-p2p/transmission|2023-09-10|Moved to a flavored vers
 net-p2p/transmission-utils|net-p2p/transmission|2023-09-10|Moved to a flavored version
 www/transmission-web|net-p2p/transmission|2023-09-10|Moved to the daemon flavor
 devel/rubygem-cucumber-tag-expressions4|devel/rubygem-cucumber-tag-expressions|2023-09-11|Remove obsoleted port. Use devel/rubygem-cucumber-tag-expressions instead
-cad/py-ocp||2023-09-05|Has expired: Broken since 2021
+security/rosenpass|net/rosenpass|2023-09-12|Remove duplicate port
