@@ -75,7 +75,7 @@ _KDE_RELNAME=		KDE${_KDE_VERSION}
 
 # === VERSIONS OF THE DIFFERENT COMPONENTS =====================================
 # Current KDE desktop.
-KDE_PLASMA_VERSION?=		5.27.7
+KDE_PLASMA_VERSION?=		5.27.8
 KDE_PLASMA_BRANCH?=		stable
 
 # Current KDE frameworks.
@@ -83,10 +83,10 @@ KDE_FRAMEWORKS_VERSION?=	5.109.0
 KDE_FRAMEWORKS_BRANCH?= 	stable
 
 # Current KDE applications.
-KDE_APPLICATIONS_VERSION?=	23.08.0
-KDE_APPLICATIONS_SHLIB_VER?=	5.24.0
+KDE_APPLICATIONS_VERSION?=	23.08.1
+KDE_APPLICATIONS_SHLIB_VER?=	5.24.1
 # G as in KDE Gear, and as in "don't make the variable name longer than required"
-KDE_APPLICATIONS_SHLIB_G_VER?=	23.8.0
+KDE_APPLICATIONS_SHLIB_G_VER?=	23.8.1
 KDE_APPLICATIONS_BRANCH?=	stable
 
 # Extended KDE universe applications.
